# xG

./: README.md  XG_Model.ipynb  __init__.py  pyproject.toml  test_model.pkl  xGmodel.py
