[tool.poetry]
name = "xg"
version = "0.1.0"
description = ""
authors = ["Aarav1433 <aarav.kp.patel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"
statsmodels = "^0.14.2"
jupyter = "^1.0.0"
jupyterlab = "^4.2.4"
streamlit-image-coordinates = "^0.1.9"
streamlit = "^1.37.0"
streamlit-drawable-canvas = "^0.9.3"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
